feat: Add method to `SolverConfig` for setting unimproved termination limit